--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/router": "~12.1.1",
     "@capacitor/app": "1.0.2",
     "@capacitor/core": "3.1.2",
+    "@capacitor/filesystem": "^1.0.2",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
+    "@capacitor/storage": "^1.0.3",
     "@ionic/angular": "^5.5.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
