--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/status-bar": "1.0.2",
     "@capacitor/storage": "^1.0.3",
     "@ionic/angular": "^5.5.2",
+    "@ionic/pwa-elements": "^3.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
