--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:io": "ionic serve",
+    "build:io": "ionic build",
+    "add:io-ios": "ionic cap add ios",
+    "add:io-android": "ionic cap add android",
+    "after-build-copy-to-www": "ionic cap copy",
+    "sync:io": "ionic cap sync",
+    "deploy:ios-local": "ionic cap open ios",
+    "deploy:android-local": "ionic cap open android"
   },
   "private": true,
   "dependencies": {
