--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
+  "private": true,
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -17,9 +18,12 @@
     "after-build-copy-to-www": "ionic cap copy",
     "sync:io": "ionic cap sync",
     "deploy:ios-local": "ionic cap open ios",
-    "deploy:android-local": "ionic cap open android"
+    "deploy:android-local": "ionic cap open android",
+    "set:hooks": "npx simple-git-hooks"
   },
-  "private": true,
+  "simple-git-hooks": {
+    "pre-commit": "npm run lint"
+  },
   "dependencies": {
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
@@ -73,6 +77,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
+    "simple-git-hooks": "^2.5.1",
     "ts-node": "~8.3.0",
     "typescript": "~4.2.4"
   },
