--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "coverage": "ng test --no-watch --code-coverage",
     "start:io": "ionic serve",
     "build:io": "ionic build",
     "add:io-ios": "ionic cap add ios",
