--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@capacitor/storage": "^1.0.3",
     "@ionic/angular": "^5.6.13",
     "@ionic/pwa-elements": "^3.0.2",
-    "rxjs": "~7.3.0",
+    "rxjs": "^6.5.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
