--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
@@ -50,7 +51,8 @@
     "@ionic/pwa-elements": "^3.0.2",
     "rxjs": "^6.5.3",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "firebase": "^7.0 || ^8.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.0",
@@ -70,6 +72,7 @@
     "@types/node": "^16.4.13",
     "@typescript-eslint/eslint-plugin": "4.29.0",
     "@typescript-eslint/parser": "4.29.0",
+    "cypress": "8.3.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jsdoc": "36.0.6",
@@ -86,7 +89,13 @@
     "simple-git-hooks": "^2.5.1",
     "ts-node": "~10.1.0",
     "typescript": "~4.3.5",
-    "cypress": "8.3.0"
+    "@angular-devkit/architect": ">= 0.900 < 0.1300",
+    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3",
+    "jsonc-parser": "^3.0.0"
   },
   "description": "An Ionic project"
 }
