--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "@capacitor/storage": "^1.0.3",
     "@ionic/angular": "^5.6.13",
     "@ionic/pwa-elements": "^3.0.2",
+    "@ngneat/transloco": "^2.22.0",
+    "firebase": "^7.0 || ^8.0",
     "rxjs": "^6.5.3",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "firebase": "^7.0 || ^8.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/architect": ">= 0.900 < 0.1300",
     "@angular-devkit/build-angular": "~12.2.0",
     "@angular-eslint/builder": "~12.3.1",
     "@angular-eslint/eslint-plugin": "~12.3.1",
@@ -77,25 +79,24 @@
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jsdoc": "36.0.6",
     "eslint-plugin-prefer-arrow": "1.2.3",
+    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~7.0.0",
+    "jsonc-parser": "^3.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "open": "^7.0.3",
     "protractor": "~7.0.0",
     "simple-git-hooks": "^2.5.1",
     "ts-node": "~10.1.0",
-    "typescript": "~4.3.5",
-    "@angular-devkit/architect": ">= 0.900 < 0.1300",
-    "firebase-tools": "^8.0.0 || ^9.0.0",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "open": "^7.0.3",
-    "jsonc-parser": "^3.0.0"
+    "typescript": "~4.3.5"
   },
   "description": "An Ionic project"
 }
