--- a/.github/workflows/ng-tests.yml
+++ b/.github/workflows/ng-tests.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Setup
         run: npm ci
 
-      - name: Test
+      - name: Run unit test
         run: |
           npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
